--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   device_info_plus: ^3.2.3
   pdf: ^3.8.4
   printing: ^5.9.3
+  gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
