--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,6 @@ dependencies:
 
   flutter_image_slideshow: ^0.1.2
   flutter_locales: ^2.0.0
-  intl: ^0.17.0
-  easy_localization: ^3.0.0
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.8
   shared_preferences: ^2.0.8
@@ -65,7 +63,9 @@ dependencies:
   pdf: ^3.8.4
   printing: ^5.9.3
   gallery_saver: ^2.3.2
-
+dependency_overrides:
+  intl: ^0.17.0
+  easy_localization: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
