--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   change_app_package_name: ^1.0.0
   firebase_core: ^1.10.0
   firebase_messaging: ^11.1.0
-
   google_maps_flutter: ^2.1.1
   dio: ^4.0.4
   json_serializable: ^6.1.3
@@ -60,6 +59,8 @@ dependencies:
   flutter_switch: ^0.3.2
   device_info_plus: ^3.2.3
   pdf: ^3.8.4
+  sqflite: ^2.3.0
+  provider: ^6.0.5
 dependency_overrides:
   intl: ^0.17.0
   easy_localization: ^3.0.0
