--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,9 +47,9 @@ lintOptions {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.maraqa.market"
+        applicationId "quds.accounting.sala7"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
