--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.1.0+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -52,6 +52,7 @@ dependencies:
   firebase_messaging: ^11.1.0
   google_maps_flutter: ^2.1.1
   dio: ^4.0.4
+  font_awesome_flutter: ^10.6.0
   json_serializable: ^6.1.3
   location: ^4.3.0
   flutter_local_notifications: ^9.2.0
@@ -61,6 +62,7 @@ dependencies:
   pdf: ^3.8.4
   sqflite: ^2.3.0
   provider: ^6.0.5
+  animate_do: ^3.0.0
 dependency_overrides:
   intl: ^0.17.0
   easy_localization: ^3.0.0
@@ -69,12 +71,12 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: "0.13.1"
   build_runner: ^2.1.7
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/quds_logo.jpeg"
+  image_path: "assets/images/QUDSLOGO.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -97,6 +99,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/fonts/Hacen_Tunisia.ttf
     - assets/logo.jpeg
     - assets/search.jpeg
