--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   sqflite: ^2.3.0
   provider: ^6.0.5
   animate_do: ^3.0.0
+  local_auth: ^2.1.7
 dependency_overrides:
   intl: ^0.17.0
   easy_localization: ^3.0.0
