--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,19 +43,13 @@ dependencies:
   fluttertoast: ^8.0.8
   shared_preferences: ^2.0.8
   image_picker: ^0.8.4+3
-  sizer: ^2.0.15
   url_launcher: ^6.0.15
   flutter_barcode_scanner: ^2.0.0
   double_back_to_close_app: ^2.1.0
-  change_app_package_name: ^1.0.0
-  firebase_core: ^1.10.0
-  firebase_messaging: ^11.1.0
   google_maps_flutter: ^2.1.1
   dio: ^4.0.4
   font_awesome_flutter: ^10.6.0
   json_serializable: ^6.1.3
-  location: ^4.3.0
-  flutter_local_notifications: ^9.2.0
   date_format: ^2.0.6
   flutter_switch: ^0.3.2
   device_info_plus: ^3.2.3
@@ -64,6 +58,7 @@ dependencies:
   provider: ^6.0.5
   animate_do: ^3.0.0
   local_auth: ^2.1.7
+  qr_code_scanner: ^1.0.1
 dependency_overrides:
   intl: ^0.17.0
   easy_localization: ^3.0.0
